force-app/main/default/objects/agenticQTC_TestSuite__mdt/agenticQTC_TestSuite__mdt.object-meta.xml
<CustomObject>
    <description>Drives the Test Suite dropdown on the Playwright Automation Tool dashboard. Add a record per Playwright spec to make it selectable in the LWC.</description>
    <label>agenticQTC Test Suite</label>
    <pluralLabel>agenticQTC Test Suites</pluralLabel>
</CustomObject>