force-app/main/default/objects/agenticQTC_TestSuite__mdt/fields/Allow_Multiple_Account__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this test suite supports multi-account mode (2-5 accounts). When both this and Allow_Single_Account__c are true, the Single / Multi toggle button is shown in the dashboard control bar.</description>
    <label>Allow Multiple Account</label>
    <type>Checkbox</type>
</CustomField>