force-app/main/default/objects/agenticQTC_TestSuite__mdt/fields/Default_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Default_Accounts__c</fullName>
    <description>Newline-separated list of account names to pre-select when this suite is run in multi-account mode. Example:
Andersen Tax LLC
Bates White
Corporation BCF Inc.</description>
    <label>Default Accounts</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>