force-app/main/default/objects/agenticQTC_TestSuite__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, the suite is hidden from the dropdown (record kept for history).</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>