force-app/main/default/objects/agenticQTC_TestSuite__mdt/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>The AgenticQTC module this suite belongs to. Matches a record label in Module__mdt (e.g. &quot;Simplified AgenticQTC&quot;).</description>
    <label>Module</label>
    <length>120</length>
    <type>Text</type>
</CustomField>