force-app/main/default/objects/agenticQTC_TestSuite__mdt/fields/Suite_Value__c.field-meta.xml
<CustomField>
    <fullName>Suite_Value__c</fullName>
    <description>Playwright spec module name (matches the value sent to the runner, e.g. &quot;agenticQtcQuantityIncrease&quot;).</description>
    <label>Suite Value</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>